--- a/css/main.css
+++ b/css/main.css
@@ -304,9 +304,9 @@ summary {
 }
 
 .team-title, .clients-title, .services-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: #212121;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
   letter-spacing: 0.03em;
   line-height: 1.17;
@@ -371,6 +371,24 @@ summary {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .visually-hidden {
@@ -572,12 +590,7 @@ header {
   height: 4px;
   background: #2196f3;
   border-radius: 2px;
-}
-
-@media screen and (max-width: 767px) {
-  .nav-list-link.current::after {
-    bottom: -12px;
-  }
+  bottom: -12px;
 }
 
 @media screen and (min-width: 768px) {
@@ -605,7 +618,7 @@ header {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts-list-item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -865,6 +878,7 @@ header {
 }
 
 .features-title {
+  text-align: center;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 14px;
@@ -874,9 +888,9 @@ header {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .features-title {
-    text-align: center;
+    text-align: start;
   }
 }
 
@@ -895,15 +909,10 @@ header {
 }
 
 .team {
+  padding-bottom: 60px;
+  padding-top: 60px;
   background-color: #f5f4fa;
   text-align: center;
-}
-
-@media screen and (max-width: 1199px) {
-  .team {
-    padding-bottom: 60px;
-    padding-top: 60px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -913,10 +922,10 @@ header {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .team-title {
-    margin-bottom: 30px;
-    font-size: 28px;
+    margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
@@ -976,10 +985,8 @@ header {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .team-list-item img {
-    width: 450px;
-  }
+.team-list-item img {
+  width: 450px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1018,11 +1025,9 @@ header {
   text-transform: capitalize;
 }
 
-@media screen and (max-width: 1199px) {
-  .clients {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1032,21 +1037,17 @@ header {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .clients-title {
-    margin-bottom: 30px;
-    font-size: 28px;
+    margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
 .clients-list {
   display: flex;
-}
-
-@media screen and (max-width: 1199px) {
-  .clients-list {
-    flex-wrap: wrap;
-  }
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1182,6 +1183,13 @@ header {
   margin-right: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .services-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+}
+
 .services-list-title {
   position: absolute;
   bottom: 0%;
@@ -1207,6 +1215,7 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  overflow-y: scroll;
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1363,7 +1372,7 @@ header {
   width: 370px;
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .agreement-field {
     width: 425px;
   }
@@ -1403,7 +1412,7 @@ header {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .agreement-label {
     font-size: 14px;
   }
@@ -1442,21 +1451,17 @@ header {
   .footer .container {
     text-align: start;
     flex-wrap: nowrap;
-    align-items: baseline;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .address-block {
-    margin-bottom: 60px;
-  }
+.address-block {
+  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .address-block {
     margin-left: 61px;
     margin-right: 165px;
-    margin-bottom: 60px;
   }
 }
 
@@ -1476,12 +1481,12 @@ header {
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .map {
-    margin-bottom: 8px;
+    margin-bottom: 9px;
   }
 }
 
@@ -1586,13 +1591,7 @@ header {
   color: #ffffff;
 }
 
-@media screen and (min-width: 768px) {
-  .subscription-title {
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscription-form {
     display: flex;
   }
@@ -1616,16 +1615,11 @@ header {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .subscription-input {
-    min-width: 450px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .subscription-input {
     margin-bottom: 0px;
     min-width: 358px;
+    margin-right: 12px;
   }
 }
 
@@ -1673,7 +1667,7 @@ header {
   }
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .filter {
     margin-bottom: 50px;
   }
@@ -1684,7 +1678,7 @@ header {
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .filter-item:not(:last-child) {
     margin-right: 9px;
     margin-bottom: 0;
