--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -19,7 +19,7 @@
 //     overflow: hidden;
 //   }
   
-  .features-list {
+.features-list {
     @media screen and (min-width: 768px){
       display: flex;
       flex-wrap: wrap;
@@ -29,7 +29,7 @@
     }
   }
   
-  .features-list-item {
+.features-list-item {
     @media screen and (max-width: 767px){
       &:not(:last-child) {
         margin-bottom: 30px;
@@ -66,9 +66,7 @@
   }
   
   .features-title {
-    @media screen and (max-width: 767px){
-      text-align: center;
-    }
+    text-align: center;
     margin-bottom: 10px;
   
     color: var(--title-text-color);
@@ -77,6 +75,9 @@
     font-weight: 700;
     line-height: 1.14;
     text-transform: uppercase;
+    @media screen and (min-width: 768px){
+      text-align: start;
+    }
   }
   
   .features-description {
@@ -95,71 +96,3 @@
   }
 
 
-//   /* FEATURES */
-// .features {
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-// }
-
-// //   .visually-hidden {
-// //     position: absolute;
-// //     width: 1px;
-// //     height: 1px;
-// //     margin: -1px;
-// //     border: 0;
-// //     padding: 0;
-// //     clip: rect(0 0 0 0);
-// //     overflow: hidden;
-// //   }
-
-// .features-list {
-//   display: flex;
-// }
-
-// .features-list-item {
-//   width: 270px;
-//   &:not(:last-child) {
-//       margin-right: 30px;
-// }
-// }
-
-// .icon-features-block {
-//   display: flex;
-//   width: 270px;
-//   height: 120px;
-//   margin-bottom: 30px;
-//   justify-content: center;
-//   align-items: center;
-
-//   background-color: var(--background-color-2);
-// }
-
-// .icon-features {
-//   width: 70px;
-//   height: 70px;
-// }
-
-// .features-title {
-//   margin-bottom: 10px;
-
-//   color: var(--title-text-color);
-//   font-size: 14px;
-//   letter-spacing: 0.03em;
-//   font-weight: 700;
-//   line-height: 1.14;
-//   text-transform: uppercase;
-// }
-
-// .features-description {
-//   margin-bottom: 0px;
-//   margin-top: 0px;
-
-//   color: $primary-text-color;
-//   font-size: 14px;
-//   letter-spacing: 0.03em;
-//   line-height: 1.71;
-
-//   &::first-letter {
-//       text-transform: capitalize;
-// } 
-// }
