--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -37,8 +37,10 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    width: 100%;
-    max-height: 609px;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    // max-height: 609px;
     @media screen and (min-width: 480px){
       width: 450px;
       height: 609px;
@@ -166,7 +168,6 @@
     margin-right: auto;
     margin-bottom: 30px;
     width: 370px;
-    // outline: none;
     @media screen and (min-width: 1200px){
       width: 425px;
     }
@@ -211,7 +212,7 @@
   }
   @media screen and (max-width: 420px) {
     display: block;
-    font-size: 8px;
+    font-size: 10px;
    }
   @media screen and (min-width: 1200px){
     font-size: 14px;
