--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,7 +10,7 @@ header{
 
     @media screen and (max-width: 767px){
       position: fixed;
-      // z-index: 10;
+      z-index: 2;
       width: 100%;
       top: 0;
       left: 0;
