--- a/css/main.css
+++ b/css/main.css
@@ -1216,9 +1216,16 @@ header {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   overflow-y: scroll;
+  z-index: 100;
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 94px 5px;
+  }
 }
 
 .is-hidden {
@@ -1232,22 +1239,21 @@ header {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  position: relative;
   padding: 40px;
   background-color: #ffffff;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 100%;
-  max-height: 100%;
-  z-index: 100;
 }
 
 @media screen and (min-width: 480px) {
   .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
     width: 450px;
     height: 609px;
   }
