--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,10 +8,15 @@
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
     overflow-y: scroll;
+    z-index: 100;
   
     transition-property: opacity;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 479px){
+      padding: 94px 5px;
+    }
   }
   
   .is-hidden {
@@ -25,10 +30,7 @@
   }
   
   .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    position: relative;
    
     padding: 40px;
     background-color: $accent-color-2;
@@ -38,13 +40,23 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     max-width: 100%;
-    max-height: 100%;
-    z-index: 100;
-    // max-height: 609px;
+  
     @media screen and (min-width: 480px){
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
       width: 450px;
       height: 609px;
     }
+
+    // @media screen and (min-width: 767px){
+    //   position: absolute;
+    //   top: 50%;
+    //   left: 50%;
+    //   transform: translate(-50%, -50%) scale(1);
+    // }
+
     @media screen and (min-width: 1200px){
       width: 528px;
       height: 581px;
