--- a/css/main.css
+++ b/css/main.css
@@ -1246,6 +1246,7 @@ header {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 480px) {
