--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -40,6 +40,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     max-width: 100%;
+    overflow-x: hidden;
   
     @media screen and (min-width: 480px){
       position: absolute;
