--- a/sass/utils/_variabels.scss
+++ b/sass/utils/_variabels.scss
@@ -9,5 +9,5 @@ $address-color: #fff;
 $address-color-2: rgba(255, 255, 255, 0.6);
 $icon-color: #afb1b8;
 
-$main-font: "Roboto";
-$logo-font:'Raleway';
+$main-font: 'Roboto';
+$logo-font: 'Raleway';
