--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,58 +1,55 @@
 .button {
   @extend %button;
-    // display: flex;
-    // border: 1px solid transparent;
-    // border-radius: 4px;
-    // padding: 2px;
-    // min-width: 200px;
-    // height: 50px;
-    // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  // display: flex;
+  // border: 1px solid transparent;
+  // border-radius: 4px;
+  // padding: 2px;
+  // min-width: 200px;
+  // height: 50px;
+  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-    // color: $accent-color-2;
-    // background-color: $accent-color;
-    // align-items: center;
-    // justify-content: center;
-    // font-weight: 700;
-    // font-size: 16px;
-    // line-height: 1.87;
-    // letter-spacing: 0.06em;  
+  // color: $accent-color-2;
+  // background-color: $accent-color;
+  // align-items: center;
+  // justify-content: center;
+  // font-weight: 700;
+  // font-size: 16px;
+  // line-height: 1.87;
+  // letter-spacing: 0.06em;
+}
+
+.hero-button {
+  @extend %button;
+  margin-left: auto;
+  margin-right: auto;
+}
+.button-modal-submit {
+  @extend %button;
+  margin-left: auto;
+  margin-right: auto;
+  &:focus,
+  &:hover {
+    background: #2196f3;
   }
-  
-  .hero-button {
-    @extend %button;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .button-modal-submit {
-    @extend %button;
-    margin-left: auto;
-    margin-right: auto;
-    &:focus,
-    &:hover{
-      background: #2196F3;
-    }
-  }
+}
 
-  .filter-button {
-    display: inline-block;
-    height: 38px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    padding: 6px 22px;
+.filter-button {
+  display: inline-block;
+  height: 38px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
+  color: $title-text-color;
+  background-color: $background-color-2;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    color: $title-text-color;
-    background-color: $background-color-2;
-    text-align: center;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
   &:hover,
   &:focus {
     color: $accent-color-2;
@@ -61,5 +58,3 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
-  
