--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,28 +1,27 @@
-header{
+header {
   position: relative;
 }
 
 .header.container {
-    display: flex;
-    align-items: center;
-    // justify-content: space-between;
-    min-height: 60px;
+  display: flex;
+  align-items: center;
+  // justify-content: space-between;
+  min-height: 60px;
 
-    @media screen and (max-width: 767px){
-      position: fixed;
-      z-index: 2;
-      width: 100%;
-      top: 0;
-      left: 0;
-      justify-content: space-between;
-      background-color: #fff;
-
-    }
-
-    @media screen and (min-width: 768px){
-      min-height: 80px;
-    }
+  @media screen and (max-width: 767px) {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    top: 0;
+    left: 0;
+    justify-content: space-between;
+    background-color: #fff;
   }
+
+  @media screen and (min-width: 768px) {
+    min-height: 80px;
+  }
+}
 
 .menu-button {
   display: inline-flex;
@@ -33,41 +32,43 @@ header{
   background-color: transparent;
   width: 40px;
   height: 40px;
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     display: none;
   }
-  }
-  
-  .menu-button .icon-mobile-close{
-    display: none;
-  }
-  
-  .menu-button.is-open .icon-mobile-close{
-    display: block;
-  }
-  
-  .menu-button.is-open .icon-menu{
-    display: none;
-  }
-  
-  .icon-menu, .icon-mobile-close{
-    fill: $title-text-color;
-  
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus{
-      fill: $accent-color;
-    }
-  }
+}
 
-  .menu-container{
-    @media screen and (max-width: 767px){
+.menu-button .icon-mobile-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-mobile-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.icon-menu,
+.icon-mobile-close {
+  fill: $title-text-color;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
+}
+
+.menu-container {
+  @media screen and (max-width: 767px) {
     background-color: #fff;
     padding: 60px;
     text-align: center;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
 
     display: none;
     position: absolute;
@@ -76,47 +77,46 @@ header{
     left: 0;
     width: 100%;
 
-      &.is-open{
-          display: block; 
-        }  
-      }
-    
-    @media screen and (min-width:768px){
-      display: flex; 
-      align-items: center;
-    }  
+    &.is-open {
+      display: block;
+    }
   }
 
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
+}
 
-.nav-list{
-  @media screen and (max-width: 767px){
+.nav-list {
+  @media screen and (max-width: 767px) {
     margin-bottom: 60px;
   }
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
   }
 }
 
 .nav-list-item:not(:last-child) {
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     margin-bottom: 40px;
   }
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     margin-right: 50px;
   }
- }
+}
 
 .nav-list-item.current {
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     margin-bottom: 52px;
   }
- }
+}
 
 .nav-list-link {
   position: relative;
   display: inline-block;
-  
+
   color: $title-text-color;
   font-size: 18px;
   font-weight: 500;
@@ -128,12 +128,12 @@ header{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus,
-  &.current{
+  &.current {
     color: $accent-color;
   }
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     font-size: 14px;
-}
+  }
 }
 
 .nav-list-link.current::after {
@@ -146,29 +146,29 @@ header{
   border-radius: 2px;
   bottom: -12px;
 
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     bottom: -32px;
   }
-  }
+}
 
-.contacts-list{
-  @media screen and (min-width: 768px){
+.contacts-list {
+  @media screen and (min-width: 768px) {
     margin-left: 84px;
   }
-  @media screen and (min-width: 1200px){
-  margin-left: 305px;
-  display: flex;
+  @media screen and (min-width: 1200px) {
+    margin-left: 305px;
+    display: flex;
   }
 }
 
 .contacts-list-item:not(:last-child) {
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     margin-bottom: 16px;
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px){
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 10px;
   }
-  @media screen and (min-width: 1200px){
+  @media screen and (min-width: 1200px) {
     margin-right: 30px;
   }
 }
@@ -181,41 +181,41 @@ header{
   letter-spacing: 0.02em;
   align-items: center;
   font-size: 18px;
-  
+
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
+
   &:hover,
   &:focus {
     color: $accent-color;
   }
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     justify-content: center;
   }
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     font-size: 12px;
-    }
-  @media screen and (min-width: 1200px){
-  padding-top: 32px;
-  padding-bottom: 32px;
-  justify-content: space-between;
-  font-size: 14px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    justify-content: space-between;
+    font-size: 14px;
   }
 }
 
 .icon-envelope {
-      width: 16px;
-      height: 12px;
-      margin-right: 10px;
-    
-      fill: currentColor;
-    }
-    
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+
+  fill: currentColor;
+}
+
 .icon-smartphone {
-      width: 10px;
-      height: 16px;
-      margin-right: 10px;
-    
-      fill: currentColor;
-    }
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+
+  fill: currentColor;
+}
